smartemission/services/home/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: home-deployment
  namespace: smartemission
  labels:
    app: home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: smartemission/se-home:1.0.0
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 80
