smartemission/services/home/service.yml
apiVersion: v1
kind: Service
metadata:
  name: home-service
  namespace: smartemission
  labels:
    app: home
spec:
  ports:
  - port: 80
  selector:
    app: home
