smartemission/services/home/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: home-service
          servicePort: 80
